small ttable error fix to  help document for Cell Ontology browser

--- a/www/VOCAB_cl_browser_help.shtml.html
+++ b/www/VOCAB_cl_browser_help.shtml.html
@@ -131,6 +131,5 @@ You can search by anatomy term to determine where a particular structure exists 
 <p style="font-size: 0.9em;"><a href="#top">Top</a></p>
 
 
-<HR>
-
 <!--#include file='include/templateBlankBodyStop.html'-->
+</table>
